--- a/vinitha.html
+++ b/vinitha.html
@@ -2,3 +2,8 @@
   <h1>vinitha</h1>
 </center>
 <hr>
+
+<p>
+  They are hard workers and do not shy away from giving their best shot in all circumstances. They love to be surrounded by beauty and live a comfortable life. People with the Taurus moon sign are extremely caring and loyal to their loved ones.
+
+</p>
